--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ body{
 img{
     max-width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .top{
@@ -163,6 +164,7 @@ img{
     color: #fff;
     text-decoration: none;
     border-radius: 4px;
+    font-weight: 500;
 }
 
 .info p{
