--- a/css/nav.css
+++ b/css/nav.css
@@ -9,7 +9,25 @@
     --color: #fff;
 }
 
+@media screen and (min-width: 1024px) {
+    nav {
+        padding-left: 24px;
+        padding-right: 24px;
+        max-width: 1024px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    nav {
+        padding-left: 0;
+        padding-right: 0;
+        max-width: 1152px;
+    }
+}
+
 nav{
+    margin-left: auto;
+    margin-right: auto;
     width: 1152px;
     position: relative;
     height: 64px;
