--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,30 @@ a{
     text-align: center;
 }
 
+/* @media screen and (min-width: 640px) {
+    .container {
+        padding-left: 24px;
+        padding-right: 24px;
+        max-width: 100%;
+    }
+} */
+
+@media screen and (min-width: 1024px) {
+    .container {
+        max-width: 1024px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+        padding-left: 0;
+        padding-right: 0;
+        max-width: 1152px;
+    }
+}
+
 .container i{
     position: relative;
     background-color: rgba(155, 155, 155, 0.082);
@@ -21,7 +45,6 @@ a{
 }
 
 body{
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,7 +92,7 @@ body{
 }
 
 .manga .featured{
-    max-width: 100%;
+    width: 100%;
     height: 250px;
     margin-top: 25px;
     background-color: rgba(155, 155, 155, 0.082);
@@ -77,7 +100,7 @@ body{
 }
 
 .featured1{
-    width: 100%;
+    max-width: 100%;
     display: flex;
 }
 
