--- a/css/nav.css
+++ b/css/nav.css
@@ -9,6 +9,14 @@
     --color: #fff;
 }
 
+@media screen and (min-width: 640px) {
+    nav {
+        padding-left: 24px;
+        padding-right: 24px;
+        max-width: 100%;
+    }
+}
+
 @media screen and (min-width: 1024px) {
     nav {
         padding-left: 24px;
@@ -28,7 +36,7 @@
 nav{
     margin-left: auto;
     margin-right: auto;
-    width: 1152px;
+    width: 100%;
     position: relative;
     height: 64px;
     display: flex;
