--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,7 @@ footer{
     max-width: 1152px;
     border-top: 2px solid;
     border-color: rgba(94, 94, 94, 0.125);
-    height: 100px;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
