--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a{
 
 .container i{
     position: relative;
-    background-color: rgba(155, 155, 155, 0.082);
+    background-color: rgba(107, 107, 107, 0.129);
     width: 50px;
     height: 50px;
     padding-top: 12.5px;
@@ -65,11 +65,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+}
+
+.buttons{
+    display: flex;
+    gap: 20px;
 }
 
 .link{
-    margin-left: 20px;
     text-decoration: none;
     color: var(--secondary-color);
     font-size: 25px;
@@ -176,6 +179,7 @@ img{
     display: flex;
     column-gap: 4px;
     white-space: nowrap;
+    overflow: hidden;
 }
 
 .tags{
