Making responsive update 4

--- a/css/nav.css
+++ b/css/nav.css
@@ -66,11 +66,8 @@ nav{
 
 .logo .logolink{
     text-decoration: none;
-    display: flex;
-    text-align: center;
-    width: 48px;
-    height: 48px;
-    padding: 5px;
+    width: 36px;
+    height: 36px;
     transition: 0.15s;
     color: var(--secondary-color);
     font-size: 18px;
@@ -237,6 +234,52 @@ nav{
     visibility: hidden;
 }
 
+.responsivenav{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid;
+    border-color: rgba(94, 94, 94, 0.125);
+}
+
+.navbuttons2{
+    padding: 8px 0px 12px;
+}
+
+.navlink2{
+    display: flex;
+    position: relative;
+    text-decoration: none;
+    font-size: 8px;
+    color: var(--secondary-color);
+    height: 40px;
+    width: 100%;
+    background: var(--primary-color);
+    padding: 8px 16px 8px 24px;
+    margin-top: 4px;
+}
+
+.navlink2:first-child{
+    margin-top: 0px;
+}
+
+.navlink2 h1{
+    font-weight: 500;
+}
+
+.navlink2 .m{
+    position: relative;
+    color: #fff;
+    top: 2px;
+    height: 20px;
+    width: 20px;
+    font-size: 13px;
+    font-weight: 600;
+    margin-left: 8px;
+    background-color: rgb(220, 38, 38);
+    border-radius: 2.5px;
+}
+
 .navlink:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
@@ -265,3 +308,5 @@ nav{
 .toggler:checked + .IconContainer .LightMode{
     visibility: visible;
 }
+
+.navtoggler:checked 
