--- a/css/nav.css
+++ b/css/nav.css
@@ -44,6 +44,7 @@ nav{
     height: 64px;
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .bar{
@@ -234,10 +235,19 @@ nav{
     visibility: hidden;
 }
 
+@media screen and (min-width: 1024px) {
+    .responsivenav{
+        height: 0;
+        width: 0;
+        opacity: 0;
+    }
+}
+
 .responsivenav{
     width: 100%;
     border-bottom: 2px solid;
     border-color: rgba(94, 94, 94, 0.125);
+    overflow: hidden;
 }
 
 .navbuttons2{
