--- a/css/projects.css
+++ b/css/projects.css
@@ -12,12 +12,35 @@ a{
 }
 
 body{
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: var(--primary-color);
     justify-content: center;
+}
+
+@media screen and (min-width: 0px) {
+    .container {
+        padding-left: 24px;
+        padding-right: 24px;
+        max-width: 100%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .container {
+        max-width: 1024px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+        padding-left: 0;
+        padding-right: 0;
+        max-width: 1152px;
+    }
 }
 
 .container {
@@ -37,20 +60,27 @@ body{
     height: 40px;
     font-weight: 800;
     line-height: 40px;
+    overflow: hidden;
 }
 
 .mangacontainer{
     max-width: 100%;
     margin-top: 32px;
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 16px;
+}
+
+@media screen and (min-width: 768px) {
+    .mangacontainer {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
 }
 
 .mangacard{
     height: 180px;
     background-color: rgba(155, 155, 155, 0.082);
-    width: 100%;
+    max-width: 100%;
     overflow: hidden;
     display: flex;
 }
@@ -77,7 +107,7 @@ img{
 
 .info{
     padding: 16px;
-    width: 448px;
+    width: calc(100% - 120px);
 }
 
 .stats{
@@ -128,6 +158,14 @@ img{
     height: 24px;
     display: flex;
     column-gap: 4px;
+    white-space: nowrap;
+    overflow-x: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.tag::-webkit-scrollbar{
+    display: none;
 }
 
 .tags{
