--- a/css/subscriptions.css
+++ b/css/subscriptions.css
@@ -20,19 +20,43 @@ body{
     justify-content: center;
 }
 
+@media screen and (min-width: 0px) {
+    .container {
+        padding-left: 24px;
+        padding-right: 24px;
+        max-width: 100%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .container {
+        max-width: 1024px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+        padding-left: 0;
+        padding-right: 0;
+        max-width: 1152px;
+    }
+}
+
 .container{
     margin-left: auto;
     margin-right: auto;
-    width: 1152px;
+    width: 100%;
 }
 
 .header{
-    height: 128px;
     padding: 24px 0px;
+    overflow: hidden;
 }
 
 .header h1{
-    font-size: 48px;
+    font-size: 36px;
     position: relative;
     color: var(--secondary-color);
     height: 48px;
@@ -40,18 +64,41 @@ body{
     line-height: 48px;
 }
 
+@media screen and (min-width: 640px){
+    .header h1{
+        font-size: 48px;
+    }
+}
+
 .header p{
     margin-top: 8px;
-    height: 24px;
     font-size: 16px;
     font-weight: 300;
     color: var(--secondary-color);
 }
 
+@media screen and (min-width: 0px) {
+    .grid {
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+}
+
+@media screen and (min-width: 640px) {
+    .grid {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+}
+
+
+@media screen and (min-width: 1024px) {
+    .grid {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+}
+
 .grid{
     padding: 24px 0px;
     display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
     max-width: 100%;
     gap: 24px;
 }
@@ -68,30 +115,26 @@ body{
 }
 
 .names{
-    height: 44px;
     padding: 8px;
 }
 
 .names h3{
     font-size: 18px;
-    height: 28px;
     font-weight: 600;
 }
 
 .text{
-    height: 56px;
+    min-height: 56px;
     padding: 8px;
 }
 
 .text p{
     font-size: 13px;
     font-weight: 400;
-    height: 20px;
     text-align: center;
 }
 
 .purchase{
-    height: 44px;
     padding: 8px 16px;
     font-weight: 600;
     font-size: 19px;
